--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="navigation-header">
                     <form class="search-line" action="https://echo.htmlacademy.ru" method="get" name="search">
                         <input class="header-search" type="search" name="finder" placeholder="Поиск по сайту" required autocomplete="off" />
-                        <button class="button-search" type="submit" >Найти</button>
+                        <button class="button-search" type="submit">Найти</button>
                     </form>
                     <ul class="navigation-user">
                         <li class="navigation-item">
@@ -46,41 +46,40 @@
                                 Корзина
                             </a>
                             <div class="popover popover-cart">
-                                <button class="popover-close-button ">
+                                <button class="popover-close-button">
                                     2
                                     <span class="visually-hidden">Закрыть</span>
-                                  </button>
+                                </button>
                                 <div class="popover-content">
                                     <h2 class="visually-hidden popover-title">Корзина</h2>
                                     <ul class="cart-items-list">
                                         <li class="cart-item">
-                                          <a class="cart-link-title" href="#">
-                                            <img class="product-cart-image" src="img/catalog/product-1.jpg" width="41" height="43" alt="Любительская селфи-палка" />
-                                            <p class="cart-item-title">Любительская селфи-палка</p>
-                                          </a>
-                                          <button type="button" class="cart-item-button">
-                                            <span class="visually-hidden">Удалить из корзины</span>
-                                        </button>
-                                          </li>
-                                          <li class="cart-item">
                                             <a class="cart-link-title" href="#">
-                                            <img class="product-cart-image" src="img/catalog/product-2.jpg" width="41" height="43" alt="Профессиональная селфи-палка" />
-                                            <p class="cart-item-title">Профессиональная селфи-палка</p>
-                                          </a>
-                                          <button type="button" class="cart-item-button ">
-                                            <span class="visually-hidden">Удалить из корзины</span>
-                                          </button>
-                                        </a>
-                                          </li>
+                                                <img class="product-cart-image" src="img/catalog/product-1.jpg" width="41" height="43" alt="Любительская селфи-палка" />
+                                                <p class="cart-item-title">Любительская селфи-палка</p>
+                                            </a>
+                                            <button type="button" class="cart-item-button">
+                                                <span class="visually-hidden">Удалить из корзины</span>
+                                            </button>
+                                        </li>
+                                        <li class="cart-item">
+                                            <a class="cart-link-title" href="#">
+                                                <img class="product-cart-image" src="img/catalog/product-2.jpg" width="41" height="43" alt="Профессиональная селфи-палка" />
+                                                <p class="cart-item-title">Профессиональная селфи-палка</p>
+                                            </a>
+                                            <button type="button" class="cart-item-button">
+                                                <span class="visually-hidden">Удалить из корзины</span>
+                                            </button>
+                                        </li>
                                     </ul>
                                     <div class="cart-price">
-                                    <p>Товаров:2</p>
-                                    <p>Сумма:2000р</p>
+                                        <p>Товаров:2</p>
+                                        <p>Сумма:2000р</p>
                                     </div>
-                                  </div>
-                                  <button class="cart-open">
-                                      Открыть корзину
-                                  </button>
+                                </div>
+                                <button class="cart-open">
+                                    Открыть корзину
+                                </button>
                             </div>
                         </li>
                     </ul>
@@ -189,41 +188,41 @@
                 </div>
                 <div class="product-slider">
                     <div class="button-container">
-                    <button class="slider-button-move slider-prev" type="button">
-                        <svg class="slider-icon" width="20" height="60" viewBox="0 0 20 60" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M20 60H16.5L0 30L16.5 0H20L3.8 30L20 60Z" />
+                        <button class="slider-button-move slider-prev" type="button">
+                            <svg class="slider-icon" width="20" height="60" viewBox="0 0 20 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M20 60H16.5L0 30L16.5 0H20L3.8 30L20 60Z" />
                             </svg>
-                        <span class="visually-hidden">Предыдущий слайд</span>
-                    </button>
-                    <button class="slider-button-move slider-next" type="button">
-                        <svg class="slider-icon" width="20" height="60" viewBox="0 0 20 60" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M20 60H16.5L0 30L16.5 0H20L3.8 30L20 60Z" />
+                            <span class="visually-hidden">Предыдущий слайд</span>
+                        </button>
+                        <button class="slider-button-move slider-next" type="button">
+                            <svg class="slider-icon" width="20" height="60" viewBox="0 0 20 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M20 60H16.5L0 30L16.5 0H20L3.8 30L20 60Z" />
                             </svg>
-                        <span class="visually-hidden">Следующий слайд</span>
-                    </button>
-                </div>
-                <div class="slider-pagination-container">
-                    <ol class="slider-pagination">
-                        <li class="slider-pagination-item">
-                            <button class="slider-pagination-button slider-pagination-button-current" type="button">
-                                <span class="visually-hidden">1 слайд</span>
-                            </button>
-                        </li>
+                            <span class="visually-hidden">Следующий слайд</span>
+                        </button>
+                    </div>
+                    <div class="slider-pagination-container">
+                        <ol class="slider-pagination">
+                            <li class="slider-pagination-item">
+                                <button class="slider-pagination-button slider-pagination-button-current" type="button">
+                                    <span class="visually-hidden">1 слайд</span>
+                                </button>
+                            </li>
 
-                        <li class="slider-pagination-item">
-                            <button class="slider-pagination-button " type="button">
-                                <span class="visually-hidden">2 слайд</span>
-                            </button>
-                        </li>
+                            <li class="slider-pagination-item">
+                                <button class="slider-pagination-button" type="button">
+                                    <span class="visually-hidden">2 слайд</span>
+                                </button>
+                            </li>
 
-                        <li class="slider-pagination-item">
-                            <button class="slider-pagination-button " type="button">
-                                <span class="visually-hidden">3 слайд</span>
-                            </button>
-                        </li>
-                    </ol>
-                    <button class="button slider-button" type="button">Подробнее</button>
-                </div>
+                            <li class="slider-pagination-item">
+                                <button class="slider-pagination-button" type="button">
+                                    <span class="visually-hidden">3 слайд</span>
+                                </button>
+                            </li>
+                        </ol>
+                        <button class="button slider-button" type="button">Подробнее</button>
+                    </div>
                 </div>
             </section>
             <section class="catalog-products">
@@ -272,15 +271,14 @@
                         <div class="services-description delivery">
                             <h3 class="tab-title">Доставка</h3>
                             <p class="tab-paragraph">
-                                Мы&nbsp;с&nbsp;удовольствием доставим ваш товар прямо
-                                к&nbsp;вашему подъезду совершенно бесплатно! Ведь
-                                мы&nbsp;неплохо заработаем, поднимая его на&nbsp;ваш этаж.
+                                Мы&nbsp;с&nbsp;удовольствием доставим ваш товар прямо к&nbsp;вашему подъезду совершенно бесплатно! Ведь мы&nbsp;неплохо заработаем, поднимая его на&nbsp;ваш этаж.
                             </p>
                         </div>
                         <div class="services-description guarantee">
                             <h3 class="tab-title">Гарантия</h3>
                             <p class="tab-paragraph">
-                                Если из-за возгорания купленного у&nbsp;нас товара у&nbsp;вас сгорит дом&nbsp;&mdash; не&nbsp;переживайте, мы&nbsp;выдадим вам новый. Товар, не&nbsp;дом, конечно&nbsp;же.                            </p>
+                                Если из-за возгорания купленного у&nbsp;нас товара у&nbsp;вас сгорит дом&nbsp;&mdash; не&nbsp;переживайте, мы&nbsp;выдадим вам новый. Товар, не&nbsp;дом, конечно&nbsp;же.
+                            </p>
                         </div>
                         <div class="services-description credit">
                             <h3 class="tab-title">Кредит</h3>
@@ -349,7 +347,7 @@
                     <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post" name="mailing">
                         <p class="newsletter-email">
                             <label class="visually-hidden" for="newsletter-email">Email</label>
-                            <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"  />
+                            <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email" />
                         </p>
 
                         <button class="button newsletter-button" type="submit">
@@ -467,56 +465,56 @@
         </footer>
         <div class="modal-container">
             <div class="modal modal-delivery">
-               <div class="modal-content">
-<h2 class="modal-title">Доставка под заказ</h2>
-<button class="modal-close-button"><span class="visually-hidden">Закрыть</span></button>
-</div>
-<form class="delivery-modal-form" action="https://echo.htmlacademy.ru/" method="post">
-    <p class="delivery-modal-name">
-        <label class="modal-form-label modal-field" for="modal-delivery-name">
-          Ваше имя:
-        </label>
-        <input class="delivery-name modal-input" type="text" id="modal-delivery-name" name="delivery-name" placeholder="Имя Фамилия">
-        <span class="modal-subtext">Пожалуйста, представьтесь</span>
-      </p>
-      <p class="delivery-modal-email">
-        <label class="modal-form-email modal-field" for="modal-delivery-email">Ваш e-mail:</label>
-        <input class="delivery-email modal-input"  placeholder="Введите e-mail" type="email" name="delivery-email" id="modal-delivery-email" >
-        <span class="modal-subtext">Забавный у вас адрес</span> 
-    </p>
-      <p class="delivery-modal-message">
-        <label class="modal-form-message modal-field" for="modal-delivery-message">
-          Что нужно привезти:
-        </label>
-        <input class="delivery-message modal-input" type="text" id="modal-delivery-message" name="message-name" placeholder="В свободной форме">
-      </p>
-      <p class="delivery-modal-number">
-        <label class="modal-form-number modal-field" for="modal-delivery-number">
-          Количество:
-        </label>
-        <button class="modal-info" type="button">
-            <span class="visually-hidden">Посмотреть дополнительную информацию</span>
-        </button>
-        <input class="delivery-number modal-input" type="number" id="modal-delivery-number" name="number-name" placeholder="1">
-        <button class="button-minus button-number" type="button">
-            <svg class="modal-image" width="16" height="2" viewBox="0 0 16 2" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M16 0H0V2H16V0Z" />
-                </svg>        
-            <span class="visually-hidden">Минус</span>
-        </button>
-        <button class="button-plus button-number" type="button">
-            <svg class="modal-image" width="16" height="16" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16 7H9V0H7v7H0v2h7v7h2V9h7V7Z" /></svg>
-            <span class="visually-hidden">Плюс</span>
-        </button>
-        <div class="popover-modal">
-            <p class="popover-modal-text">
-                Постараемся найти, сколько нужно. Привезём сколько получится по требованиям к провозу багажа.
-            </p>
-        </div>
-      </p>
-      <button class="modal-button button" type="submit">Отправить</button>
-      </form>
+                <div class="modal-content">
+                    <h2 class="modal-title">Доставка под заказ</h2>
+                    <button class="modal-close-button"><span class="visually-hidden">Закрыть</span></button>
+                </div>
+                <form class="delivery-modal-form" action="https://echo.htmlacademy.ru/" method="post">
+                    <p class="delivery-modal-name">
+                        <label class="modal-form-label modal-field" for="modal-delivery-name">
+                            Ваше имя:
+                        </label>
+                        <input class="delivery-name modal-input" type="text" id="modal-delivery-name" name="delivery-name" placeholder="Имя Фамилия" />
+                        <span class="modal-subtext-name">Пожалуйста, представьтесь</span>
+                    </p>
+                    <p class="delivery-modal-email">
+                        <label class="modal-form-email modal-field" for="modal-delivery-email">Ваш e-mail:</label>
+                        <input class="delivery-email modal-input" placeholder="Введите e-mail" type="email" name="delivery-email" id="modal-delivery-email" />
+                        <span class="modal-subtext-email">Забавный у вас адрес</span>
+                        <span class="modal-subtext-email-change">Подпись под полем ввода</span>
+                    </p>
+                    <p class="delivery-modal-message">
+                        <label class="modal-form-message modal-field" for="modal-delivery-message">
+                            Что нужно привезти:
+                        </label>
+                        <input class="delivery-message modal-input" type="text" id="modal-delivery-message" name="message-name" placeholder="В свободной форме" />
+                    </p>
+                    <p class="delivery-modal-number">
+                        <label class="modal-form-number modal-field" for="modal-delivery-number">
+                            Количество:
+                        </label>
+                        <button class="modal-info" type="button">
+                            <span class="visually-hidden">Посмотреть дополнительную информацию</span>
+                            <span class="popover-modal-text">
+                                Постараемся найти, сколько нужно. Привезём сколько получится по требованиям к провозу багажа.
+                            </span>
+                        </button>
+                        <input class="delivery-number modal-input" type="number" id="modal-delivery-number" name="number-name" placeholder="1" />
+                        <button class="button-minus button-number" type="button">
+                            <svg class="modal-image" width="16" height="2" viewBox="0 0 16 2" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M16 0H0V2H16V0Z" />
+                            </svg>
+                            <span class="visually-hidden">Минус</span>
+                        </button>
+                        <button class="button-plus button-number" type="button">
+                            <svg class="modal-image" width="16" height="16" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16 7H9V0H7v7H0v2h7v7h2V9h7V7Z" /></svg>
+                            <span class="visually-hidden">Плюс</span>
+                        </button>
+                    </p>
+                    <button class="modal-button button" type="submit">Отправить</button>
+                </form>
             </div>
         </div>
     </body>
 </html>
+
