--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                 </div>
                 <div class="navigation-elements">
                     <ul class="navigation-services">
-                        <li class="navigation-item-element">
-                            <a class="navigation-element button" href="#">Каталог товаров</a>
+                        <li class="navigation-item-element navigation-item-element-catalog ">
+                            <a class="navigation-element navigation-element-catalog button" href="#">Каталог товаров</a>
                             <div class="navigation-catalog">
                                 <ul class="link-list">
                                     <li class="link-list-item">
