--- a/catalog.html
+++ b/catalog.html
@@ -298,7 +298,7 @@
                                 </div>
                                 <a href="#" class="product-card-button button">Подробнее</a>
                             </li>
-                            <li class="product-card">
+                            <li class="product-card product-card-follow">
                                 <a class="product-card-link" href="#">
                                     <img class="product-card-image" src="img/catalog/product-4.jpg" width="360" height="380" alt="Селфи-палка следуй за-мной" />
                                 </a>
