--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                                 Войти
                             </a>
                         </li>
-                        <li class="navigation-item">
-                            <a class="navigation-link" href="#">
+                        <li class="navigation-item compare-item">
+                            <a class="navigation-link compare-item" href="#">
                                 <svg class="navigation-icon" width="10" height="12" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6 0H4v12h2V0ZM2 4H0v8h2V4ZM10 3H8v9h2V3Z" fill="#000" /></svg>
                                 Сравнить
                             </a>
@@ -268,19 +268,19 @@
                     </div>
                     <div class="description-list">
                         <div class="services-description delivery">
-                            <h3 class="tab-title">Доставка</h3>
+                            <h3 class="tab-title title-delivery">Доставка</h3>
                             <p class="tab-paragraph">
                                 Мы&nbsp;с&nbsp;удовольствием доставим ваш товар прямо к&nbsp;вашему подъезду совершенно бесплатно! Ведь мы&nbsp;неплохо заработаем, поднимая его на&nbsp;ваш этаж.
                             </p>
                         </div>
                         <div class="services-description guarantee">
-                            <h3 class="tab-title">Гарантия</h3>
+                            <h3 class="tab-title title-garanty">Гарантия</h3>
                             <p class="tab-paragraph">
                                 Если из-за возгорания купленного у&nbsp;нас товара у&nbsp;вас сгорит дом&nbsp;&mdash; не&nbsp;переживайте, мы&nbsp;выдадим вам новый. Товар, не&nbsp;дом, конечно&nbsp;же.
                             </p>
                         </div>
                         <div class="services-description credit">
-                            <h3 class="tab-title">Кредит</h3>
+                            <h3 class="tab-title title-credit">Кредит</h3>
                             <p class="tab-paragraph">
                                 Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.
                             </p>
