--- a/catalog.html
+++ b/catalog.html
@@ -150,7 +150,7 @@
                         <h2 class="products-filter">Фильтр:</h2>
                         <div class="filter-container">
                             <form class="catalog-filter" action="#" method="get" name="filter">
-                                <fieldset class="catalog-filter-group">
+                                <fieldset class="catalog-filter-group-price catalog-filter-group">
                                     <legend class="catalog-filter-title">Стоимость</legend>
                                     <div class="range">
                                         <div class="range-scale">
@@ -169,8 +169,8 @@
                                         </div>
                                     </div>
                                 </fieldset>
-                                <fieldset class="catalog-filter-group">
-                                    <legend class="catalog-filter-title">Цвет</legend>
+                                <fieldset class="catalog-filter-group-color catalog-filter-group" >
+                                    <legend class="catalog-filter-title-color">Цвет</legend>
                                     <ul class="catalog-filter-list">
                                         <li class="catalog-filter-item">
                                             <label class="control">
@@ -209,8 +209,8 @@
                                         </li>
                                     </ul>
                                 </fieldset>
-                                <fieldset class="catalog-filter-group">
-                                    <legend class="catalog-filter-title">Bluetooth</legend>
+                                <fieldset class="catalog-filter-group-bluetooth catalog-filter-group">
+                                    <legend class="catalog-filter-title-bluetooth">Bluetooth</legend>
                                     <ul class="catalog-filter-list">
                                         <li class="catalog-filter-item">
                                             <label class="control">
@@ -262,10 +262,10 @@
                                     <img class="product-card-image" src="img/catalog/product-1.jpg" width="360" height="380" alt="Любительская селфи-палка" />
                                 </a>
                                 <div class="product">
-                                    <a class="product-card-name" href="#">
+                                    <a class="product-card-name-amateur" href="#">
                                         <h3 class="product-card-title">Любительская селфи-палка</h3>
                                     </a>
-                                    <b class="product-card-price">500р</b>
+                                    <b class="product-card-price">500 ₽</b>
                                 </div>
                                 <a href="#" class="product-card-button button">Подробнее</a>
                             </li>
@@ -276,10 +276,10 @@
                                 <div class="product">
                                     <a class="product-card-name" href="#">
                                         <h3 class="product-card-title">
-                                            Профессиональная селфи-палка
+                                            Профессиональная<br> селфи-палка
                                         </h3>
                                     </a>
-                                    <b class="product-card-price">1500р</b>
+                                    <b class="product-card-price">1 500 ₽</b>
                                 </div>
                                 <a href="#" class="product-card-button button">Подробнее</a>
                             </li>
@@ -291,10 +291,10 @@
                                 <div class="product">
                                     <a class="product-card-name" href="#">
                                         <h3 class="product-card-title">
-                                            Непотопляемая селфи-палка
+                                            Непотопляемая<br> селфи-палка
                                         </h3>
                                     </a>
-                                    <b class="product-card-price">2500р</b>
+                                    <b class="product-card-price">2 500 ₽</b>
                                 </div>
                                 <a href="#" class="product-card-button button">Подробнее</a>
                             </li>
@@ -305,10 +305,10 @@
                                 <div class="product">
                                     <a class="product-card-name" href="#">
                                         <h3 class="product-card-title">
-                                            Селфи-палка "следуй за мной"
+                                          Селфи-палка «Следуй за<br> мной»
                                         </h3>
                                     </a>
-                                    <b class="product-card-price">4900р</b>
+                                    <b class="product-card-price">4 900 ₽</b>
                                 </div>
                                 <a href="#" class="product-card-button button">Подробнее</a>
                             </li>
