--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                 <section class="about-us">
                     <h2 class="tab-title title-company">О нас</h2>
                     <div class="advantage-range">
-                        <p>
+                        <p class="choice">
                             Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.
                         </p>
                         <p>
@@ -322,9 +322,9 @@
                 <section class="contacts">
                     <h2 class="tab-title title-company">Контакты</h2>
                     <p class="pickup">
-                        Вы можете забрать товар сами, заехав в наш офис. Заодно, сможете проверить работоспособность покупки.
+                        Вы можете забрать товар сами, заехав в наш офис. Заодно сможете проверить работоспособность покупки.
                     </p>
-                    <h3 class="contacts-subtitle">Интернет-магазин "Девайс"</h3>
+                    <h3 class="contacts-subtitle">Интернет-магазин «Девайс»</h3>
                     <address class="contacts-address">
                         <p class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
                         <a class="contacts-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
@@ -335,7 +335,7 @@
                         <li class="contacts-schedule-item">сб—вс: с 10:00 до 19:00</li>
                     </ul>
 
-                    <a class="button button-about" href="#">Напишите нам</a>
+                    <a class="button button-write" href="#">Напишите нам</a>
                 </section>
             </div>
             <section class="newsletter">
